--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
         <div id="paint-info-container">
             <h2 id="color-name"></h2>
             <h2 id="color-price"></h2>
+
         </div>
-
-
         <div>
-            <img id="pn1" src="./assets/colors/lime-green.jpeg" height="200" width="220" alt="Lime green paint" />
-            <img id="pn2" src="./assets/colors/medium-brown.jpeg" height="200" width="220" alt="Brown paint" />
-            <img id="pn3" src="./assets/colors/royal-blue.jpeg" height="200" width="220" alt="Royal blue paint" />
+            <img id="pn1" src="./assets/colors/lime-green.jpeg" height="220" width="220" alt="Lime green paint" />
+            <img id="pn2" src="./assets/colors/medium-brown.jpeg" height="220" width="220" alt="Brown paint" />
+            <img id="pn3" src="./assets/colors/royal-blue.jpeg" height="220" width="220" alt="Royal blue paint" />
         </div>
 
         <div>
@@ -36,6 +35,13 @@
             <img id="pn8" src="./assets/colors/solid-purple.jpeg" height="200" width="220" alt="Purple paint" />
             <img id="pn9" src="./assets/colors/solid-yellow.jpeg" height="200" width="220" alt="Yellow paint" />
         </div>
+
+        <div class="floatRight">        
+            <h1 id="color"></h1>                       
+            <h1 class="price" id="ppg"></h1>
+        </div>    
+    
+        <script src="./assets/js/paint.js"></script>
 
 
 
